--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
-header {
+h1 {
     font: Tahoma, Verdana;
-    font-size: 15px;
+    font-size: 14px;
     color: blue;
 }
 
@@ -11,6 +11,7 @@ body {
 }
 
 table {
+    font: Consolas;
     padding: 1px;
     font-size: 10px;
 }
